--- a/public/global.css
+++ b/public/global.css
@@ -1,21 +1,24 @@
-canvas {
-    display: block;
-    margin: auto;
-    border: 1px solid black;
+/* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+.row.content {height: 1500px}
+    
+/* Set gray background color and 100% height */
+.sidenav {
+  background-color: #f1f1f1;
+  height: 100%;
 }
 
 /* Set black background color, white text and some padding */
 footer {
   background-color: #555;
   color: white;
-  padding: 8px;
+  padding: 5px;
 }
 
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
   .sidenav {
 	height: auto;
-	padding: 10px;
+	padding: 15px;
   }
   .row.content {height: auto;} 
 }
