--- a/public/global.css
+++ b/public/global.css
@@ -1,5 +1,5 @@
 /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-.row.content {height: 1500px}
+.row.content {height: 1000px}
     
 /* Set gray background color and 100% height */
 .sidenav {
@@ -17,10 +17,14 @@ footer {
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
   .sidenav {
-	height: auto;
-	padding: 15px;
+    height: auto;
+    padding: 15px;
   }
   .row.content {height: auto;} 
+  footer {
+    padding: 2px;
+    font-size: small;
+  }
 }
 
 .fab {
@@ -76,4 +80,8 @@ footer {
   font-size: .875rem;
   background: #555;
   color: white;
+}
+
+.jumbotron-fluid {
+
 }
